# SimpleMLP

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  RESEARCH.md  SimpleMLP.pro  generate_constants.sh  list2  testmodel.mlpmodel  testmodel.mlpmodel.REMOVED.git-id  testmodel0.mlpmodel  testmodel0.mlpmodel.REMOVED.git-id  testmodel1.mlpmodel  testmodel1.mlpmodel.REMOVED.git-id  testmodel2.mlpmodel  testmodel2.mlpmodel.REMOVED.git-id  testmodel3.mlpmodel  testmodel3.mlpmodel.REMOVED.git-id  testmodel4.mlpmodel  testmodel4.mlpmodel.REMOVED.git-id  valgrind-out.txt
$ContentRoot$/: .ninja_deps  .ninja_log  CMakeCache.txt  SimpleMLP  build.ninja  cmake_install.cmake
$ContentRoot$/.cmake/api/v1/reply/: cache-v2-6c021c4a9a8e11aa75cc.json  cmakeFiles-v1-b9e84d7000c8d34221f1.json  codemodel-v2-f5eab38ea3b93fa8b58a.json  index-2023-01-28T21-18-54-0501.json  target-SimpleMLP-Debug-df777ef851d619862b03.json
datasets/: .gitattributes  model.mlpmodel
misc/images/: mlp.png.REMOVED.git-id
src/: ActivationFunction.cpp  ActivationFunction.hpp  CMakeLists.txt  GraphNode.tpp  IMLPModel.hpp  IMLPModel.hpp.gch.REMOVED.git-id  MLPMatrixModel.hpp  MLPMatrixModel.hpp.gch.REMOVED.git-id  MLPMatrixModelv2.cpp  MLPMatrixModelv2.hpp  MLPSerializer.hpp  Makefile  Matrix.hpp  Matrix.hpp.gch.REMOVED.git-id  Sample.hpp  a.out  data.txt  data2.txt  log.log.REMOVED.git-id  main.cpp  testmodel.mlpmodel  testmodel.mlpmodel.REMOVED.git-id
src/core/: ActivationFunction.hpp  DatasetReading.cc  DatasetReading.cpp  DatasetReading.h  DatasetReading.hpp  Flags.hpp  IMLPModelBuilder.h  IMLPModelBuilder.hpp  LetterRecognitionMlpModelBuilder.cc  LetterRecognitionMlpModelBuilder.cpp  LetterRecognitionMlpModelBuilder.h  LetterRecognitionMlpModelBuilder.hpp  MLPMatrixModelv2.hpp  MTWorker.hpp  Makefile  Matrix.hpp  a.out  main.cc  main.cpp  plot.py  results  test.output  testmodel.mlpmodel.REMOVED.git-id
src/core/ModelWorker/: ModelTestWorker.cc  ModelTestWorker.h  ModelTrainWorker.cc  ModelTrainWorker.h  ModelWorker.cc  ModelWorker.h
src/core/exceptions/: MatrixException.h  ModelProcessingException.h  ModelProcessingException.hpp  UploadFileException.h
src/core/graph/: MLPGraphLayer.cc  MLPGraphLayer.cpp  MLPGraphLayer.h  MLPGraphLayer.hpp  MLPGraphModel.cc  MLPGraphModel.cpp  MLPGraphModel.h  MLPGraphModel.hpp  MLPGraphNode.cc  MLPGraphNode.cpp  MLPGraphNode.h  MLPGraphNode.hpp
src/core/matrix/: MLPMatrixLayer.cc  MLPMatrixLayer.h  MLPMatrixLayer.hpp  MLPMatrixModel.cc  MLPMatrixModel.h  MLPMatrixModel.hpp  MLPMatrixModelv2.hpp  Matrix.h  Matrix.hpp
src/core/utils/: AFLibrary.cc  AFLibrary.h  ActivationFunction.cc  ActivationFunction.cpp  ActivationFunction.h  ActivationFunction.hpp  BMPReader.cpp  BMPReader.hpp  ConfusionMatrix.h  ConfusionMatrix.hpp  IMLPLayer.h  IMLPModel.h  IMLPModel.hpp  MLPSerializer.h  MLPSerializer.hpp  ModelMetrics.cc  ModelMetrics.h  Sample.h  Sample.hpp
src/gui/: MTWorker.cpp  MTWorker.hpp  Makefile  SimpleMLP.pro  importfileitem.cpp  importfileitem.h  main.cc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  paintview.cpp  paintview.h  resourses.qrc  testdatainfodialog.h
src/gui/controller/: ModelController.cc  ModelController.h  ModelTestWorker.cc  ModelTestWorker.h  ModelTrainWorker.cc  ModelTrainWorker.h  ModelWorker.cc  ModelWorker.h
src/gui/utils/: MTWorker.cpp  MTWorker.hpp  ModelController.cc  ModelController.h  ModelTestWorker.cc  ModelTestWorker.cpp  ModelTestWorker.h  ModelTestWorker.hpp  ModelTrainWorker.cc  ModelTrainWorker.cpp  ModelTrainWorker.h  ModelTrainWorker.hpp  ModelWorker.cc  ModelWorker.cpp  ModelWorker.h  ModelWorker.hpp  const.h  importfileitem.cc  importfileitem.cpp  importfileitem.h  paintview.cc  paintview.cpp  paintview.h
src/gui/view/: ConfigureModulePage.cc  ConfigureModulePage.cpp  TestModelPage.cc  TestModelPage.cpp  TrainModelPage.cc  TrainModelPage.cpp  mainwindow.cc  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  testdatainfodialog.cc  testdatainfodialog.cpp  testdatainfodialog.h  testdatainfodialog.ui  ui_mainwindow.h  ui_testdatainfodialog.h
src/lib/libs21/: libs21.h  s21_load_bmp.cc  s21_to_lower.cc  s21_to_upper.cc
src/libs21/: libs21.h  s21_load_bmp.cc  s21_to_upper.cc
src/libs21/include/: libs21.h
src/libs21/src/: s21_load_bmp.cc  s21_split.cc  s21_to_lower.cc  s21_to_upper.cc
src/libs21/src/patterns/: a.out  s21_Publisher.cc
src/res/: autosave0.mlpmodel  autosave0.mlpmodel.REMOVED.git-id  autosave1.mlpmodel  autosave1.mlpmodel.REMOVED.git-id  autosave2.mlpmodel  autosave2.mlpmodel.REMOVED.git-id  autosave3.mlpmodel  autosave3.mlpmodel.REMOVED.git-id  autosave4.mlpmodel  autosave4.mlpmodel.REMOVED.git-id  resources.qrc
src/res/tex/: SimpleMLP.tex
src/resources/icons/: a.icns
src/resources/tex/: SimpleMLP.tex
src/tests/: CMakeLists.txt
src/tests/core/graph/: GraphLayerTest.cc  GraphModelTest.cc  GraphTest.cc
src/tests/core/matrix/: MatrixModelTest.cc  MatrixTest.cc  MatrixTest.cpp
src/tests/core/utils/: AFLibraryTest.cc  ActivationFunctionTest.cc  ActivationFunctionTest.cpp  BMPReaderTest.cpp
src/tests/libs21/: BMPReaderTest.cc
